--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -39,7 +39,7 @@
 
   <form action="{% url 'detail' %}" method="GET">
       <input size=50 style="font-size:15pt" type="text" id="searchArea"
-          name="lastname" value="Hadi gezilecek Yerleri Bulalım...">
+          name="lastname" value="SoftYazi">
       <button type="submit">Ara!</button>
   </form>
 
