--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -17,7 +17,7 @@
         font-family: 'arial', sans-serif;
 margin:0px;
     }
-    
+
     .main {
         background-color: transparent;
         width: 650px;
@@ -25,7 +25,7 @@ margin:0px;
         margin: 1em auto;
         border-radius: 1.5em;
     }
-    
+
 input {
   background-image: none;
   border: 0;
@@ -42,7 +42,7 @@ input {
 input[type='submit'] {
   cursor: pointer;
 }
-    
+
     .searchinput {
     width: 76%;
     color: rgb(38, 50, 56);
@@ -62,18 +62,18 @@ input[type='submit'] {
 float:left;
  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
     }
-    
+
     form.form1 {
         padding-top: 40px;
     }
-    
-   
-    
+
+
+
     .search {
       cursor: pointer;
         border-radius: 5em;
         color: #fff;
-   
+
         border: 0;
         padding-left: 40px;
         font-family: 'Ubuntu', sans-serif;
@@ -81,7 +81,7 @@ float:left;
         font-size: 13px;
  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
     }
-    
+
 form.form1 button {
   float: left;
   width: 20%;
@@ -95,7 +95,7 @@ form.form1 button {
   cursor: pointer;
   border-radius:0px 20px 20px 0px;
 }
-    
+
 	form.form1 button:hover {
   background: #E040FB;
 }
@@ -124,13 +124,13 @@ form.form1::after {
   cursor: pointer;
   border-radius:20px !important;
 }
-    
+
     @media (max-width: 600px) {
         .main {
             border-radius: 0px;
         }
 	}
-        
+
 .logo{
 	text-align:center;
 	margin-bottom:20px;
@@ -297,31 +297,30 @@ h1{
 
 <body>
 
- <div class="main">   
-    <form class="form1">
-     <form action="{% url 'detail' %}" method="GET">
-        <div class="logo"><img src="static/images/gff.gif" width="100" height="100" alt="logo" /></div>
-          <input style="background-color: #FFFFFF;" class="searchinput " name="lastname" type="text" align="center" placeholder="Search">
-       <button type="submit">Search</button>
-     </form>
+ <div class="main">
+    <form class="form1" action="{% url 'detail' %}" method="GET">
+     <div class="logo"><img src="static/images/gff.gif" width="100" height="100" alt="logo" /></div>
 
- <div class="checkboxContainer">
- <label class="container">Text1
-  <input type="checkbox" checked="checked">
-  <span class="checkmark"></span>
-</label>
-<label class="container">Text2
-  <input type="checkbox">
-  <span class="checkmark"></span>
-</label>
-<label class="container">Text3
-  <input type="checkbox">
-  <span class="checkmark"></span>
-</label>
-</div>
-     
-       </form>      
-                
+      <input style="background-color: #FFFFFF" class="searchinput "  id="searchArea" name="lastname" type="text" align="center" placeholder="Search">
+      <button type="submit">Search</button>
+
+     <div class="checkboxContainer">
+     <label class="container">Text1
+      <input type="checkbox" checked="checked">
+      <span class="checkmark"></span>
+    </label>
+    <label class="container">Text2
+      <input type="checkbox">
+      <span class="checkmark"></span>
+    </label>
+    <label class="container">Text3
+      <input type="checkbox">
+      <span class="checkmark"></span>
+    </label>
+    </div>
+
+       </form>
+
     </div>
 <ul>
       <li><a class="activate"href="#">About Us</a></li>
