Checkbox kısmı geliştirme

--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -305,17 +305,17 @@ h1{
       <button type="submit">Search</button>
 
      <div class="checkboxContainer">
-     <label class="container">Text1
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
+     <label class="container" value="doga">Text1
+          <input type="checkbox" checked="checked"  name="checks[]">
+          <span class="checkmark"></span>
+     </label>
+     <label class="container" value ="kamp">Text2
+          <input type="checkbox" name="checks[]">
+          <span class="checkmark"></span>
     </label>
-    <label class="container">Text2
-      <input type="checkbox">
-      <span class="checkmark"></span>
-    </label>
-    <label class="container">Text3
-      <input type="checkbox">
-      <span class="checkmark"></span>
+    <label class="container" value="turizm">Text3
+          <input type="checkbox" name="checks[]">
+          <span class="checkmark"></span>
     </label>
     </div>
 
