Checkbox kısmı geliştirme v2

--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -306,15 +306,15 @@ h1{
 
      <div class="checkboxContainer">
      <label class="container" value="doga">Text1
-          <input type="checkbox" checked="checked"  name="checks[]">
+          <input type="checkbox" checked="checked"  name="checks[]" value="x">
           <span class="checkmark"></span>
      </label>
      <label class="container" value ="kamp">Text2
-          <input type="checkbox" name="checks[]">
+          <input type="checkbox" name="checks[]" value="y">
           <span class="checkmark"></span>
     </label>
     <label class="container" value="turizm">Text3
-          <input type="checkbox" name="checks[]">
+          <input type="checkbox" name="checks[]" value="z">
           <span class="checkmark"></span>
     </label>
     </div>
