Şehir sıralaması harita üstüne eklendi

--- a/gezi/templates/resultPage.html
+++ b/gezi/templates/resultPage.html
@@ -421,9 +421,9 @@ h1{
 
 
 <ol>
-  <li>test test test test test test test test </li>
-  <li>liste</li>
-  <li>test</li>
+    {% for cityName in sortedCitiesNameList %}
+        <li>{{cityName}}</a> </li>
+    {% endfor %}
 </ol>
 
 
