--- a/gezi/templates/resultPage.html
+++ b/gezi/templates/resultPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -422,7 +422,7 @@ h1{
 
 <ol>
     {% for cityName in sortedCitiesNameList %}
-        <li>{{cityName}}</a> </li>
+        <li>{{cityName}}</li>
     {% endfor %}
 </ol>
 
@@ -435,20 +435,31 @@ h1{
 <!--The div element for the map -->
     <div id="map"></div>
     <script>
-// Initialize and add the map
-function initMap() {
-  // The location of Uluru
-  var x1 = {lat: 40.323464, lng: 36.552193};
-  var x2 = {lat: 41.015137, lng: 28.979530};
+        // Initialize and add the map
+        function initMap() {
+          // The location of Uluru
+          var x1 = {lat: 40.323464, lng: 36.552193};
+          var x2 = {lat: 41.015137, lng: 28.979530};
 
-  // The map, centered at Uluru
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 5, center: x1});
-  // The marker, positioned at Tokat,Istanbul
-  var marker = new google.maps.Marker({position: x1, map: map});
-  var marker1 = new google.maps.Marker({position: x2, map: map});
-}
-    </script>
+          // The map, centered at Uluru
+          var map = new google.maps.Map(
+              document.getElementById('map'), {zoom: 6, center: x1});
+          // The marker, positioned at Tokat,Istanbul
+          var marker = new google.maps.Marker({position: x1, map: map});
+          var marker1 = new google.maps.Marker({position: x2, map: map});
+
+          {% for latVal in sortedCitiesLatList %}
+               {% for lonVal in sortedCitiesLonList %}
+                  {% if forloop.counter == forloop.parentloop.counter %}
+                        var b = {lat: {{latVal}}, lng: {{lonVal}}};
+                        var c = new google.maps.Marker({position: b, map: map});
+                  {% endif %}
+               {% endfor %}
+           {% endfor %}
+
+
+        }
+     </script>
     <!--Load the API from the specified URL
     * The async attribute allows the browser to render the page while the API loads
     * The key parameter will contain your own API key (which is not needed for this tutorial)
