--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -134,6 +134,10 @@ form.form1::after {
 .logo{
 	text-align:center;
 	margin-bottom:20px;
+	max-width: 620px;
+    overflow: hidden;
+    max-height: 200px;
+    border-radius: 20px;
 	}
 
 ul{
@@ -299,7 +303,7 @@ h1{
 
  <div class="main">
     <form class="form1" action="{% url 'detail' %}" method="GET">
-     <div class="logo"><img src="static/images/gff.gif" width="100" height="100" alt="logo" /></div>
+     <div class="logo"><img src="static/images/gff.gif" width="620" height="100" alt="logo" /></div>
 
       <input style="background-color: #FFFFFF" class="searchinput "  id="searchArea" name="lastname" type="text" align="center" placeholder="Search">
       <button type="submit">Search</button>
