--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -297,6 +297,53 @@ h1{
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 50px);
 }
+
+.onoffswitch {
+        position: relative; width: 180px;
+        -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+    }
+    .onoffswitch-checkbox {
+        display: none;
+    }
+    .onoffswitch-label {
+        display: block; overflow: hidden; cursor: pointer;
+        border: 2px solid #999999; border-radius: 20px;
+    }
+    .onoffswitch-inner {
+        display: block; width: 200%; margin-left: -100%;
+        transition: margin 0.3s ease-in 0s;
+    }
+    .onoffswitch-inner:before, .onoffswitch-inner:after {
+        display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+        font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+        box-sizing: border-box;
+    }
+    .onoffswitch-inner:before {
+        content: "Yakınımda Bul";
+        padding-left: 40px;
+        background-color: #34A7C1; color: #FFFFFF;
+    }
+    .onoffswitch-inner:after {
+        content: "İl Secerek Bul";
+        padding-right: 40px;
+        background-color: #cca806; color: #FFFFFF;
+        text-align: right;
+    }
+    .onoffswitch-switch {
+        display: block; width: 18px; margin: 6px;
+        background: #FFFFFF;
+        position: absolute; top: 0; bottom: 0;
+        right: 140px;
+        border: 2px solid #999999; border-radius: 20px;
+        transition: all 0.3s ease-in 0s;
+    }
+    .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+        margin-left: 0;
+    }
+    .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+        right: 0px;
+    }
+
 </style>
 
 <body>
@@ -304,6 +351,14 @@ h1{
  <div class="main">
     <form class="form1" action="{% url 'detail' %}" method="GET">
      <div class="logo"><img src="static/images/gff.gif" width="620" height="100" alt="logo" /></div>
+
+     <div class="onoffswitch">
+        <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+        <label class="onoffswitch-label" for="myonoffswitch">
+            <span class="onoffswitch-inner"></span>
+            <span class="onoffswitch-switch"></span>
+        </label>
+    </div>
 
       <input style="background-color: #FFFFFF" class="searchinput "  id="searchArea" name="lastname" type="text" align="center" placeholder="Search">
       <button type="submit">Search</button>
