--- a/gezi/templates/firstPage.html
+++ b/gezi/templates/firstPage.html
@@ -7,7 +7,7 @@
 <style>
 
        body {
-        background:url(static/images/background.jpg) no-repeat center center fixed;
+        background:url(static/images/background.png) no-repeat center center fixed;
 	color:#000;
 	background-size: cover;
 	 -webkit-background-size: cover;
