Sayfa Yenileme olayı tamamlandi..[Bug fixlendi]

--- a/gezi/templates/resultPage.html
+++ b/gezi/templates/resultPage.html
@@ -525,5 +525,12 @@ h1{
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6_6C1NFxCpGyEMqIqmnQPt7ZJz_osa7Q&callback=initMap">
     </script>
 
+ <!-- Burası rotaStateFlag flag için secondFlag ve thirdFlag komutlarında çalışıyor -->
+<form action="{% url 'detail' %}" method="GET">
+    <div>
+        <input type="text"  style="visibility: hidden;" id="xdemR" name="changeStatus1" value="tpmksRxikseel">
+        <button type="submit" style="visibility: hidden;" id="xdemR1" value="TTT">ttt</button>
+    </div>
+</form>
 </body>
 </html>
